# RAG-CLI

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: patient_demo.py
src/: citation.py  cli.py  config.py  embeddings.py  generator.py  ingest.py  ocr.py  output.py  retriever.py  vector_store.py
