[project]
name = "rag-cli"
version = "0.1.0"
description = "Command-line RAG Q&A tool over a small local PDF knowledge base (learning project)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
]

[tool.uv]
package = false
